# TensorII

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: CMakeLists.txt
cmake/all_warnings_props/: CMakeLists.txt
src/core/: CMakeLists.txt  Tensor.cpp  foo.cpp  sources.cmake
src/core/include/TensorII/: AnyShape.h  DynamicShape.h  IndexedTensorView.h  Shape.h  StaticShape.h  Tensor.h  TensorDType.h  TensorIndex.h  TensorInitializer.h  TensorIterator.h  TensorView.h  Types.h
src/core/include/TensorII/private/: AnyShape.h  ConceptUtil.h  Shape_private.h  TensorIndex.h  TensorInitializer.h  Tensor_predecl.h  Tensor_private.h  template_util.h  toTensor.h
src/core/include/TensorII/private/headers/: AnyShape_private.h  Shape_private.h  Tensor_predecl.h  Tensor_private.h
src/core/include/TensorII/private/srcs/: AnyShape.cpp  AnyShape.tpp  Shape.cpp  Shape.tpp  StaticTensor.cpp  Tensor.cpp  Tensor.tpp  TensorView.tpp
src/core/include/TensorII/private/templates/: AnyShape.tpp  IndexedTensorView.tpp  Shape.tpp  Tensor.tpp  TensorView.tpp  toTensor.tpp
src/core/include/public/Tensor/: Shape.h  Tensor.h  TensorDType.h  TensorInitializer.h
src/core/include/public/Tensor/impl/: Tensor.cpp  Tensor_private.h
src/core/include/public/TensorII/: Shape.h  Tensor.h  TensorDType.h  TensorInitializer.h
src/core/include/public/TensorII/impl/: Tensor.cpp  Tensor_private.h  template_util.h
src/core/ispc/: CMakeLists.txt  foo.cpp  sources.cmake
src/runner/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
test/core/: AnyShape_test.cpp  CMakeLists.txt  DynamicShape_test.cpp  Shape_test.cpp  StaticShape_test.cpp  TensorIndex_test.cpp  TensorInitializerTest.cpp  TensorView_test.cpp  Tensor_test.cpp  foo.cpp  tests.cmake
test/core/ispc/: CMakeLists.txt
